# GCVL

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  GCVLConfig.cmake.in  README.md  index.html  params.json
cmake/Modules/: FindOpenCL.cmake
doxygen/: algorithm_8cpp.html  algorithm_8h.html  annotated.html  blockmatching_8h.html  blockmatching_8h_source.html  class_c_u_d_a___array.js  class_c_u_d_a__device.html  class_c_u_d_a__device.js  class_c_u_d_a__devices__list-members.html  class_c_u_d_a__devices__list.html  class_open_c_l___data.html  class_open_c_l___data.js  class_open_c_l___kernel.html  class_open_c_l___kernel.js  class_open_c_l__device.html  class_open_c_l__device.js  class_open_c_l__platform-members.html  class_open_c_l__platform.html  class_open_c_l__platform.js  class_open_c_l__platforms__list-members.html  class_open_c_l__platforms__list.html  classgcvl_1_1_algorithm-members.html  classgcvl_1_1_algorithm.js  classgcvl_1_1_block_matching-members.html  classgcvl_1_1_block_matching.html  classgcvl_1_1cuda_1_1_algorithm.html  classgcvl_1_1cuda_1_1_core.html  classgcvl_1_1opencl_1_1_algorithm-members.html  classgcvl_1_1opencl_1_1_block_matching-members.html  classgcvl_1_1opencl_1_1_core.html  classgcvl_1_1opencl_1_1_core.js  cudaalgorithm_8cpp.html  cudaalgorithm_8h.html  cudaalgorithm_8h_source.html  export_8h_source.html  files.html  files.js  gcvlconfig_8h.html  gcvlutils_8h.html  gcvlutils_8h_source.html  (+16 more)
doxygen/html/: algorithm_8h_source.html  annotated.js  blockmatching_8cpp.html  class_c_u_d_a___array-members.html  class_c_u_d_a___array.html  class_c_u_d_a__device-members.html  class_c_u_d_a__devices__list.js  class_g_c_v_l_config-members.html  class_g_c_v_l_config.html  class_g_c_v_l_config.js  class_open_c_l___array-members.html  class_open_c_l___array.html  class_open_c_l___array.js  class_open_c_l___data-members.html  class_open_c_l___kernel-members.html  class_open_c_l__device-members.html  class_open_c_l__devices__list-members.html  class_open_c_l__devices__list.html  class_open_c_l__devices__list.js  class_open_c_l__platforms__list.js  classes.html  classgcvl_1_1_algorithm.html  classgcvl_1_1_block_matching.js  classgcvl_1_1cuda_1_1_algorithm-members.html  classgcvl_1_1cuda_1_1_algorithm.js  classgcvl_1_1cuda_1_1_block_matching-members.html  classgcvl_1_1cuda_1_1_block_matching.html  classgcvl_1_1cuda_1_1_block_matching.js  classgcvl_1_1cuda_1_1_core-members.html  classgcvl_1_1cuda_1_1_core.js  classgcvl_1_1opencl_1_1_algorithm.html  classgcvl_1_1opencl_1_1_algorithm.js  classgcvl_1_1opencl_1_1_block_matching.html  classgcvl_1_1opencl_1_1_block_matching.js  classgcvl_1_1opencl_1_1_core-members.html  cudablockmatching_8cpp.html  cudablockmatching_8h.html  cudablockmatching_8h_source.html  cudacore_8cpp.html  cudacore_8h.html  (+37 more)
doxygen/html/search/: all_5f.js  all_63.js  all_64.js  all_67.js  all_6d.js  all_6f.js  all_70.js  classes_67.js  classes_73.js  defines_5f.js  defines_61.js  defines_67.js  defines_6f.js  defines_72.js  files_62.js  files_67.js  functions_61.js  functions_62.js  functions_67.js  functions_68.js  functions_6b.js  functions_6d.js  functions_6f.js  functions_70.js  functions_72.js  functions_76.js  functions_7e.js  variables_63.js  variables_64.js  variables_67.js  variables_6b.js  variables_6d.js
doxygen/search/: all_61.js  all_62.js  all_69.js  all_6b.js  all_6c.js  all_6e.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  classes_61.js  classes_62.js  classes_63.js  classes_6f.js  defines_63.js  defines_71.js  defines_73.js  files_63.js  files_6f.js  functions_63.js  functions_64.js  functions_73.js  namespaces_67.js  search.js  variables_5f.js  variables_62.js  variables_70.js  variables_73.js
memoir/: .gitignore  pfm.tex  pfm_agradecimientos.tex  pfm_biblio.bib  pfm_certificado.tex  pfm_dedicatoria.tex  pfm_desc.tex  pfm_frontmatter_intro.tex  pfm_main_020.tex  pfm_main_030.tex  pfm_main_040.tex  pfm_main_050.tex  pfm_palabras_clave.tex  pfm_portada.tex  pfm_resumen.tex  pfm_resumen_cast.tex  pfm_resumo.tex  pfm_soft_hard.tex
src/gcvl/: CMakeLists.txt  algorithm.cpp  algorithm.h  blockmatching.cpp  blockmatching.h  export.h  gcvlconfig.h  gcvlutils.h  oclalgorithm.cpp  oclalgorithm.h  oclblockmatching.cpp  oclblockmatching.h  oclcore.cpp  oclcore.h  oclutils.cpp  oclutils.h
src/gcvl/cuda/: cudaalgorithm.cpp  cudaalgorithm.h  cudablockmatching.cpp  cudablockmatching.h  cudacore.cpp  cudacore.h  cudautils.cpp  cudautils.h
src/gcvl/cuda/kernels/: blockmatching.cu  blockmatching.cuh  cuda_interface.cu  test.cu  test.h
src/gcvl/kernels/: block_matching.cl  image_man.cl  normalization.cl
src/gcvl/opencl/: oclalgorithm.cpp  oclalgorithm.h  oclblockmatching.cpp  oclblockmatching.h  oclcore.cpp  oclcore.h  oclutils.cpp  oclutils.h
src/gcvl/opencl/kernels/: block_matching.cl  image_man.cl
src/test_cpu/: CMakeLists.txt  test_cpu.cpp
src/test_cuda/: CMakeLists.txt  test_cuda.cpp
src/test_gcvl/: CMakeLists.txt  test_gcvl.cpp
src/test_opencl/: CMakeLists.txt  test_opencl.cpp
tools/: GraphGen.py  push-doxygen.sh  travisci_rsa.enc
